--- a/Clean-Reader/Theme/Dark.xaml
+++ b/Clean-Reader/Theme/Dark.xaml
@@ -2,33 +2,33 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Clean_Reader.Theme">
-    <AcrylicBrush x:Key="SideBackground" BackgroundSource="HostBackdrop" TintColor="#171922" FallbackColor="#171922" TintOpacity="0.7"/>
+    <AcrylicBrush x:Key="SideBackground" BackgroundSource="HostBackdrop" TintColor="#1b1b1b" FallbackColor="#171922" TintOpacity="0.8"/>
     <AcrylicBrush x:Key="PaneBackground" BackgroundSource="Backdrop" TintColor="#171922" FallbackColor="#171922" TintOpacity="0.9"/>
-    <AcrylicBrush x:Key="PopupBackground" BackgroundSource="Backdrop" TintColor="#171922" FallbackColor="#1C1C1C" TintOpacity="0.8"/>
+    <AcrylicBrush x:Key="PopupBackground" BackgroundSource="Backdrop" TintColor="#0D0D0D" FallbackColor="#0D0D0D" TintOpacity="0.8"/>
     <AcrylicBrush x:Key="CoverBackground" BackgroundSource="Backdrop" TintColor="#171922" FallbackColor="#1C1C1C" TintOpacity="0.6"/>
     <SolidColorBrush x:Key="MaskBackground" Color="#282828" Opacity="0.6"/>
     <SolidColorBrush x:Key="PageBackground" Color="#171922"/>
     <SolidColorBrush x:Key="PageOverBackground" Color="#0D0D0D"/>
-    <SolidColorBrush x:Key="CardBackground" Color="#3a3f53"/>
-    <SolidColorBrush x:Key="CardBackgroundOver" Color="#2E3242"/>
+    <SolidColorBrush x:Key="CardBackground" Color="#2E2E2E"/>
+    <SolidColorBrush x:Key="CardBackgroundOver" Color="#1A1A1A"/>
     <SolidColorBrush x:Key="PointerOverMaskBackground" Color="White" Opacity="0.05"/>
     <SolidColorBrush x:Key="TransparentBackground" Color="Black" Opacity="0.01"/>
 
     <SolidColorBrush x:Key="ImportantTextColor" Color="#FFFFFF"/>
     <SolidColorBrush x:Key="NormalTextColor" Color="#E2E2E5"/>
     <SolidColorBrush x:Key="TipTextColor" Color="#828492"/>
-    <SolidColorBrush x:Key="MaskTextColor" Color="#3D4469"/>
+    <SolidColorBrush x:Key="MaskTextColor" Color="#696969"/>
 
-    <SolidColorBrush x:Key="LineColor" Color="#3a3e55"/>
-    <SolidColorBrush x:Key="LineColorOver" Color="#424761"/>
+    <SolidColorBrush x:Key="LineColor" Color="#3d3d3d"/>
+    <SolidColorBrush x:Key="LineColorOver" Color="#363636"/>
     <SolidColorBrush x:Key="ProgressColor" Color="#5B689E" Opacity="0.75"/>
     <SolidColorBrush x:Key="ProgressColorOver" Color="#414A70" Opacity="0.7"/>
     <Color x:Key="ShadowColor">#111111</Color>
 
-    <SolidColorBrush x:Key="PrimaryColorOpacity" Color="#156FB2" Opacity="0.1"/>
-    <SolidColorBrush x:Key="PrimaryColor" Color="#89BAF0"/>
-    <SolidColorBrush x:Key="PrimaryColorDown" Color="#156FB2"/>
-    <SolidColorBrush x:Key="PrimaryColorOver" Color="#6BA5F0"/>
+    <SolidColorBrush x:Key="PrimaryColorOpacity" Color="#0C8CF5" Opacity="0.2"/>
+    <SolidColorBrush x:Key="PrimaryColor" Color="#0C8CF5"/>
+    <SolidColorBrush x:Key="PrimaryColorDown" Color="#0483FA"/>
+    <SolidColorBrush x:Key="PrimaryColorOver" Color="#1068D1"/>
     <SolidColorBrush x:Key="SecondaryColorOpacity" Color="#F7BA71" Opacity="0.2"/>
     <LinearGradientBrush x:Key="SecondaryColor" StartPoint="0,0" EndPoint="1,1">
         <GradientStopCollection>
