--- a/Clean-Reader/App.xaml
+++ b/Clean-Reader/App.xaml
@@ -17,6 +17,7 @@
                 <ResourceDictionary Source="ms-appx:///Template/View.xaml"/>
                 <ResourceDictionary Source="ms-appx:///Template/Converters.xaml"/>
                 <ResourceDictionary Source="ms-appx:///Template/Input.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Template/Media.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
