--- a/Clean-Reader/Pages/SettingPage.xaml
+++ b/Clean-Reader/Pages/SettingPage.xaml
@@ -47,7 +47,7 @@
     <ScrollViewer Style="{StaticResource BasicScrollViewer}"
                   VerticalScrollBarVisibility="Hidden"
                   HorizontalScrollMode="Disabled">
-        <StackPanel>
+        <StackPanel Padding="0,0,0,30">
             
             <ComboBox Style="{StaticResource BasicComboBoxStyle}" Width="200"
                               ItemContainerStyle="{StaticResource BasicComboBoxItemContainerStyle}"
@@ -84,6 +84,19 @@
                     <uwp:FeatherIcon Symbol="ChevronDown" FontSize="{CustomResource BasicFontSize}"/>
                 </interaction:NumberBox.DownButtonIcon>
             </interaction:NumberBox>
+
+            <ToggleSwitch HeaderTemplate="{StaticResource TipHeader}" Margin="0,20,0,0"
+                          Style="{StaticResource BasicToggleSwitchStyle}"
+                          x:Uid="Control_AutoOpenLastBookSwitch" x:Name="AutoOpenLastBookSwitch"
+                          Toggled="AutoOpenLastBookSwitch_Toggled"/>
+
+            <ToggleSwitch HeaderTemplate="{StaticResource TipHeader}" Margin="0,20,0,0"
+                          Style="{StaticResource BasicToggleSwitchStyle}"
+                          x:Uid="Control_AutoCheckWebBookUpdate" x:Name="AutoCheckWebBookSwitch"
+                          Toggled="AutoCheckWebBookSwitch_Toggled"/>
+
+            <TextBlock Style="{StaticResource SmallTextStyle}" x:Name="LastUpdateTimeBlock" Margin="0,10,0,0"
+                       Visibility="{x:Bind AutoCheckWebBookSwitch.IsOn,Mode=OneWay,Converter={StaticResource VisConverter}}"/>
 
             <ComboBox Style="{StaticResource BasicComboBoxStyle}" Margin="0,15,0,0" Width="200"
                               ItemContainerStyle="{StaticResource BasicComboBoxItemContainerStyle}"
