--- a/Clean-Reader/Pages/ShelfPage.xaml
+++ b/Clean-Reader/Pages/ShelfPage.xaml
@@ -77,7 +77,7 @@
                 <Grid Grid.Row="1" Grid.ColumnSpan="2">
                     <components:IconTextBlock Symbol="BookOpen" Click="ImportButton_Click"
                                               Margin="0,35,0,0" x:Name="NoDataBlock"
-                                              x:Uid="Control_ShelfNoDataBlock"/>
+                                              x:Uid="Control_ShelfNoDataBlock" ButtonVisibility="Visible"/>
                     <GridView x:Name="ShelfBookGridView" IsItemClickEnabled="True" ItemsSource="{x:Bind vm.DisplayBookCollection}"
                           Style="{StaticResource NoScrollGridView}" ScrollViewer.VerticalScrollBarVisibility="Hidden"
                           ItemContainerStyle="{StaticResource TransparentGridViewItemContainerStyle}"
