--- a/Clean-Reader/Controls/Components/ColorConfigPanel.xaml
+++ b/Clean-Reader/Controls/Components/ColorConfigPanel.xaml
@@ -10,7 +10,7 @@
     d:DesignWidth="400">
     <UserControl.Resources>
         <DataTemplate x:Key="ColorItemTemplate" x:DataType="ui:ReaderColorConfig">
-            <local:ColorDisplayBlock DataContext="{Binding}" Margin="0,10,10,0" Apply="ColorDisplay_Apply" Delete="ColorDisplay_Delete"
+            <local:ColorDisplayBlock DataContext="{Binding}" Apply="ColorDisplay_Apply" Delete="ColorDisplay_Delete"
                                      />
         </DataTemplate>
     </UserControl.Resources>
@@ -34,7 +34,7 @@
                                       Grid.Row="1"
                                   ItemsSource="{x:Bind vm.ColorConfigCollection}"
                                   ItemContainerStyle="{StaticResource TransparentGridViewItemContainerStyle}"
-                                  Style="{StaticResource BasicGridView}"
+                                  Style="{StaticResource BasicGridView}" ItemClick="ColorConfigGridView_ItemClick"
                                   IsItemClickEnabled="True" DesiredWidth="100" ItemHeight="80"
                                   ItemTemplate="{StaticResource ColorItemTemplate}"
                                   />
