--- a/Clean-Reader/Controls/Components/ReaderBar.xaml
+++ b/Clean-Reader/Controls/Components/ReaderBar.xaml
@@ -78,48 +78,55 @@
                 Background="{ThemeResource PopupBackground}" CornerRadius="10,10,0,0" Padding="10" x:Name="MenuBar">
 
             <interaction:ActionButton Style="{StaticResource DefaultActionButtonStyle}" x:Name="BackButton"
-                                                  VerticalAlignment="Center" Click="BackButton_Click">
+                                                  VerticalAlignment="Center" Click="BackButton_Click"
+                                      XYFocusLeft="{x:Bind MoreButton}" XYFocusRight="{x:Bind SpeechButton}">
                 <interaction:ActionButton.Icon>
                     <uwp:FeatherIcon Symbol="ArrowLeft" FontSize="{CustomResource BasicFontSize}"/>
                 </interaction:ActionButton.Icon>
             </interaction:ActionButton>
             <interaction:ActionButton Style="{StaticResource DefaultActionButtonStyle}" x:Name="SpeechButton"
-                                                  VerticalAlignment="Center" Click="SpeechButton_Click"  Margin="10,0">
+                                                  VerticalAlignment="Center" Click="SpeechButton_Click"  Margin="10,0"
+                                      XYFocusLeft="{x:Bind BackButton}" XYFocusRight="{x:Bind ChapterButton}">
                 <interaction:ActionButton.Icon>
                     <uwp:FeatherIcon Symbol="Headphones" FontSize="{CustomResource BasicFontSize}"/>
                 </interaction:ActionButton.Icon>
             </interaction:ActionButton>
             <interaction:IconButton Style="{StaticResource DefaultIconButtonStyle}" x:Name="ChapterButton"
                                                 x:Uid="Control_ChapterTipBlock" Click="ChapterButton_Click" Background="Transparent"
-                                                GutterWidth="10">
+                                                GutterWidth="10"
+                                    XYFocusLeft="{x:Bind SpeechButton}" XYFocusRight="{x:Bind FontButton}">
                 <interaction:IconButton.Icon>
                     <uwp:FeatherIcon Symbol="List" FontSize="{CustomResource BasicFontSize}"/>
                 </interaction:IconButton.Icon>
             </interaction:IconButton>
             <interaction:IconButton Style="{StaticResource DefaultIconButtonStyle}" x:Name="FontButton"
                                                 x:Uid="Control_FontTipBlock" Background="Transparent"
-                                                GutterWidth="10" Flyout="{StaticResource FontFlyout}">
+                                                GutterWidth="10" Flyout="{StaticResource FontFlyout}"
+                                    XYFocusLeft="{x:Bind ChapterButton}" XYFocusRight="{x:Bind ColorButton}">
                 <interaction:IconButton.Icon>
                     <uwp:FeatherIcon Symbol="Type" FontSize="{CustomResource BasicFontSize}"/>
                 </interaction:IconButton.Icon>
             </interaction:IconButton>
             <interaction:IconButton Style="{StaticResource DefaultIconButtonStyle}" x:Name="ColorButton"
                                                 x:Uid="Control_ColorTipBlock" Background="Transparent"
-                                                GutterWidth="10" Flyout="{StaticResource ColorFlyout}">
+                                                GutterWidth="10" Flyout="{StaticResource ColorFlyout}"
+                                    XYFocusLeft="{x:Bind FontButton}" XYFocusRight="{x:Bind SearchButton}">
                 <interaction:IconButton.Icon>
                     <uwp:MaterialIcon Symbol="ColorLens" FontSize="{CustomResource BasicFontSize}"/>
                 </interaction:IconButton.Icon>
             </interaction:IconButton>
             <interaction:IconButton Style="{StaticResource DefaultIconButtonStyle}" x:Name="SearchButton"
                                                 x:Uid="Control_SearchTipBlock" Background="Transparent"
-                                                GutterWidth="10" Click="SearchButton_Click">
+                                                GutterWidth="10" Click="SearchButton_Click"
+                                    XYFocusLeft="{x:Bind ColorButton}" XYFocusRight="{x:Bind MoreButton}">
                 <interaction:IconButton.Icon>
                     <uwp:FeatherIcon Symbol="Search" FontSize="{CustomResource BasicFontSize}"/>
                 </interaction:IconButton.Icon>
             </interaction:IconButton>
             <interaction:IconButton Style="{StaticResource DefaultIconButtonStyle}" x:Name="MoreButton"
                                                 x:Uid="Control_MoreTipBlock" Background="Transparent"
-                                                GutterWidth="10" Flyout="{StaticResource OtherFlyout}">
+                                                GutterWidth="10" Flyout="{StaticResource OtherFlyout}"
+                                    XYFocusLeft="{x:Bind SearchButton}" XYFocusRight="{x:Bind SpeechButton}">
                 <interaction:IconButton.Icon>
                     <uwp:FeatherIcon Symbol="MoreHorizontal" FontSize="{CustomResource BasicFontSize}"/>
                 </interaction:IconButton.Icon>
